--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,11 @@
     "builds": [
         {
             "src": "frontend/app.py",
-            "use": "@vercel/python"
+            "use": "@vercel/python",
+            "config": {
+                "maxLambdaSize": "15mb",
+                "runtime": "python3.11"
+            }
         }
     ],
     "routes": [
@@ -11,5 +15,9 @@
             "src": "/(.*)",
             "dest": "frontend/app.py"
         }
-    ]
+    ],
+    "env": {
+        "PYTHONPATH": ".",
+        "PORT": "8000"
+    }
 }
