--- a/vercel.json
+++ b/vercel.json
@@ -2,22 +2,14 @@
     "version": 2,
     "builds": [
         {
-            "src": "frontend/app.py",
-            "use": "@vercel/python",
-            "config": {
-                "maxLambdaSize": "15mb",
-                "runtime": "python3.11"
-            }
+            "src": "api/index.py",
+            "use": "@vercel/python"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "frontend/app.py"
+            "dest": "api/index.py"
         }
-    ],
-    "env": {
-        "PYTHONPATH": ".",
-        "PORT": "8000"
-    }
+    ]
 }
